--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "http-server": "^14.1.1",
     "typescript": "^4.8.3"
   }
 }
