--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.6",
     "gatsby": "^4.23.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
